# Automata

./: *cmake-tools*  .gitignore  .inv.py  CMakeLists.txt  README.txt  compile_commands.json
.cache/clangd/index/: Automata.cpp.12735D45D4179572.idx  Automata.h.610CE695287D7B65.idx  Automata1D.cpp.C0CA97CE10BE8DF5.idx  Automata1D.h.291C2638EF23DFA8.idx  Automata2D.cpp.5E528C425BB3C94C.idx  Automata2D.h.C05543BAF1F4EC71.idx  Errors.cpp.C0EA6F7E76F58438.idx  Errors.h.077DA9A2DC2B949E.idx  Random.cpp.DE5B70CFE92AA8CB.idx  Random.h.9EB4272352835442.idx  SDLAutomata.cpp.69DFB5F1CB57AF94.idx  SDLAutomata.h.C6A83936F43C2A57.idx  TerminalAutomata.cpp.36035FCBE23169F9.idx  main.cpp.A08C9EA836611ECE.idx  my_utils.cpp.85FD8E60CA14787C.idx  my_utils.h.03FC7B7A7E753AEA.idx  terminalAutomata.cpp.42E983B6968925EB.idx  terminalAutomata.h.0284928AA2589762.idx
Header_Files/: Automata.h  Automata1D.h  Automata2D.h  my_utils.h
Source_Files/: Automata.cpp  Automata1D.cpp  Automata2D.cpp  SDLAutomata.cpp  TerminalAutomata.cpp  main.cpp  terminalAutomata.cpp
